Added SampleListener, so sample test is self contained

--- a/src/tony/CMakeLists.txt
+++ b/src/tony/CMakeLists.txt
@@ -241,3 +241,7 @@ add_dependencies(science tony_generate_messages_cpp)
 add_executable(sample Sample/Sample.cpp)
 target_link_libraries(sample ${catkin_LIBRARIES})
 add_dependencies(sample tony_generate_messages_cpp)
+
+add_executable(sample_listener Sample/SampleListener.cpp)
+target_link_libraries(sample_listener ${catkin_LIBRARIES})
+add_dependencies(sample_listener tony_generate_messages_cpp)
