Added message for arm and motor

--- a/src/tony/CMakeLists.txt
+++ b/src/tony/CMakeLists.txt
@@ -62,6 +62,7 @@ find_package(catkin REQUIRED COMPONENTS
    raw_imus.msg
    raw_science.msg
    controller.msg
+   arm.msg
  )
 
 ## Generate services in the 'srv' folder
