Refactoring Controller and Communication

--- a/src/tony/CMakeLists.txt
+++ b/src/tony/CMakeLists.txt
@@ -63,6 +63,7 @@ find_package(catkin REQUIRED COMPONENTS
    raw_science.msg
    controller.msg
    arm.msg
+   motor.msg
  )
 
 ## Generate services in the 'srv' folder
