Added functionality for gracefully handling and recovering from node crashes.
TODO: Test this with various communications patterns

--- a/src/sample_node_config.json
+++ b/src/sample_node_config.json
@@ -1,11 +1,23 @@
 {
     "id": "sample",
-    "protocol": "tcp",
-    "port": "5556",
-    "model": "pubsub",
-
     "topics": [
-        { "arm": "pub" },
-        { "inputs": "sub" }
+        {
+            "arm": "pub",
+            "protocol": "tcp",
+            "port": "5556",
+            "model": "pubsub"
+        },
+        {
+            "inputs": "sub",
+            "protocol": "tcp",
+            "port": "5556",
+            "model": "pubsub"
+        },
+        {
+            "comms": "req",
+            "protocol": "udp",
+            "port": "7777",
+            "model": "reqrep"
+        }
     ]
 }
